--- a/jakarta-bandung.html
+++ b/jakarta-bandung.html
@@ -93,21 +93,17 @@
     </ul>
 
     <h3>Day 1</h3>
+    <div class="row row-cols-sm-2">
+      <div class="col-sm-3">5:05 PM</div>
+      <div class="col-sm-9">From KL to Jakarta</div>
+  </div>
+    
 
-    <div class="row row-cols-2">
-      <div class="col-3">
-        5.05pm
-      </div>
-      <div class="col-9">
-        From KL to Jakarta
-      </div>
-    </div>
-
-    <div class="row row-cols-2">
-      <div class="col-3">
+    <div class="row row-cols-sm-2">
+      <div class="col-sm-3">
         6.10pm
       </div>
-      <div class="col-9">
+      <div class="col-sm-9">
         <p>Leaving airport</p>
         <p><b>Option 1:</b></p>
         <ul>
