--- a/jakarta-bandung.html
+++ b/jakarta-bandung.html
@@ -61,6 +61,26 @@
       color: #0056b3;
       text-decoration: underline;
     }
+
+    /* Back-to-Top Button */
+    #back-to-top {
+      position: fixed;
+      bottom: 20px;
+      right: 20px;
+      display: none;
+      background-color: #007bff;
+      color: white;
+      border: none;
+      border-radius: 50%;
+      width: 40px;
+      height: 40px;
+      align-items: center;
+      justify-content: center;
+      font-size: 1.5rem;
+    }
+    #back-to-top:hover {
+      background-color: #0056b3;
+    }
   </style>
 </head>
 
@@ -96,8 +116,8 @@
     <div class="row row-cols-sm-2">
       <div class="col-sm-3">5:05 PM</div>
       <div class="col-sm-9">From KL to Jakarta</div>
-  </div>
-    
+    </div>
+
 
     <div class="row row-cols-sm-2">
       <div class="col-sm-3">
@@ -288,6 +308,8 @@
       </div>
     </div>
   </div>
+  <!-- Back-to-Top Button -->
+  <button id="back-to-top" title="Back to Top"><i class="bi bi-arrow-up"></i></button>
 
   <footer>
     <div class="container">
@@ -299,6 +321,22 @@
 
   <!-- Bootstrap JS Bundle -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- Bootstrap JS Bundle -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script>
+      // Back-to-Top Button
+      const backToTopButton = document.getElementById('back-to-top');
+      window.addEventListener('scroll', () => {
+        if (window.scrollY > 300) {
+          backToTopButton.style.display = 'flex';
+        } else {
+          backToTopButton.style.display = 'none';
+        }
+      });
+      backToTopButton.addEventListener('click', () => {
+        window.scrollTo({ top: 0, behavior: 'smooth' });
+      });
+    </script>
 </body>
 
 </html>
