--- a/jakarta-bandung.html
+++ b/jakarta-bandung.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description"
     content="Explore the perfect mix of urban exploration and natural retreats with a family trip to Jakarta and Bandung.">
+  <meta name="keywords" content="Jakarta travel, Bandung trip, Family itinerary, Indonesia adventure">
   <title>Jakarta & Bandung Family Trip</title>
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -62,24 +63,32 @@
       text-decoration: underline;
     }
 
-    /* Back-to-Top Button */
+    /* Back to Top Button Styles */
     #back-to-top {
       position: fixed;
       bottom: 20px;
       right: 20px;
-      display: none;
-      background-color: #007bff;
-      color: white;
-      border: none;
+      width: 50px;
+      height: 50px;
       border-radius: 50%;
-      width: 40px;
-      height: 40px;
-      align-items: center;
-      justify-content: center;
+      background-color: rgba(0, 0, 0, 0.6);
+      color: white;
       font-size: 1.5rem;
+      text-align: center;
+      line-height: 50px;
+      cursor: pointer;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+      opacity: 0;
+      transition: opacity 0.3s, transform 0.3s ease-in-out;
     }
+
     #back-to-top:hover {
-      background-color: #0056b3;
+      background-color: rgba(0, 0, 0, 0.8);
+      transform: scale(1.1);
+    }
+
+    #back-to-top.show {
+      opacity: 1;
     }
   </style>
 </head>
@@ -178,7 +187,8 @@
             Pantjoran PIK is inspired by Chinese and Indonesian traditional cultures, particularly drawing on the name
             "Pantjoran," which refers to a historic Chinese community in Jakarta during the Dutch colonial period.
           </p>
-          <img src="https://rouentan18.github.io/images/pantjoran-pik.jpg" class="img-fluid mb-3" alt="pantjoran-pik">
+          <img src="https://rouentan18.github.io/images/pantjoran-pik.jpg" class="img-fluid mb-3"
+            alt="Image of Pantjoran Pantai Indah Kapuk PIK">
         </div>
       </div>
     </div>
@@ -210,7 +220,7 @@
             <a href="https://www.pecenongan43.com/" target="_blank" rel="noopener noreferrer">www.pecenongan43.com</a>
           </p>
           <img src="https://rouentan18.github.io/images/martabak-pecenongan-43.jpg" class="img-fluid mb-3"
-            alt="martabak-pecenongan-43">
+            alt="Image of Martabak Pecenongan 43">
         </div>
       </div>
     </div>
@@ -253,7 +263,7 @@
               rel="noopener noreferrer">www.facebook.com/wongfukie</a>
           </p>
           <img src="https://rouentan18.github.io/images/wong-fu-kie.jpg" class="img-fluid mb-3"
-            alt="martabak-pecenongan-43">
+            alt="Image of Wong Fu Kie Pantjoran PIK Hakka Authentic Chinese Food">
         </div>
       </div>
     </div>
@@ -303,7 +313,7 @@
             <a href="https://g.co/kgs/Kp8C7or" target="_blank" rel="noopener noreferrer">Google Review</a>
           </p>
           <img src="https://rouentan18.github.io/images/new-tempo-doeloe.jpg" class="img-fluid mb-3"
-            alt="martabak-pecenongan-43">
+            alt="Image of New Tempo Doeloe">
         </div>
       </div>
     </div>
@@ -321,22 +331,22 @@
 
   <!-- Bootstrap JS Bundle -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <!-- Bootstrap JS Bundle -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script>
-      // Back-to-Top Button
-      const backToTopButton = document.getElementById('back-to-top');
-      window.addEventListener('scroll', () => {
-        if (window.scrollY > 300) {
-          backToTopButton.style.display = 'flex';
-        } else {
-          backToTopButton.style.display = 'none';
-        }
-      });
-      backToTopButton.addEventListener('click', () => {
-        window.scrollTo({ top: 0, behavior: 'smooth' });
-      });
-    </script>
+  <!-- Bootstrap JS Bundle -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+  <script>
+    // Back-to-Top Button
+    const backToTopButton = document.getElementById('back-to-top');
+    window.addEventListener('scroll', () => {
+      if (window.scrollY > 300) {
+        backToTopButton.style.display = 'flex';
+      } else {
+        backToTopButton.style.display = 'none';
+      }
+    });
+    backToTopButton.addEventListener('click', () => {
+      window.scrollTo({ top: 0, behavior: 'smooth' });
+    });
+  </script>
 </body>
 
 </html>
