--- a/jakarta-bandung.html
+++ b/jakarta-bandung.html
@@ -319,8 +319,9 @@
     </div>
   </div>
   <!-- Back-to-Top Button -->
-  <button id="back-to-top" title="Back to Top"><i class="bi bi-arrow-up"></i></button>
-
+  <!-- <button id="back-to-top" title="Back to Top"><i class="bi bi-arrow-up"></i></button> -->
+  <!-- Back to Top Button -->
+  <div id="back-to-top" title="Back to Top">&uarr;</div>
   <footer>
     <div class="container">
       <p>🌟 Thanks for tagging along on this adventure! 🌏</p>
@@ -331,20 +332,24 @@
 
   <!-- Bootstrap JS Bundle -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-  <!-- Bootstrap JS Bundle -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   <script>
-    // Back-to-Top Button
+    // Show/Hide Back to Top Button
     const backToTopButton = document.getElementById('back-to-top');
+
     window.addEventListener('scroll', () => {
-      if (window.scrollY > 300) {
-        backToTopButton.style.display = 'flex';
+      if (window.scrollY > 200) {
+        backToTopButton.classList.add('show');
       } else {
-        backToTopButton.style.display = 'none';
+        backToTopButton.classList.remove('show');
       }
     });
+
+    // Smooth Scroll to Top
     backToTopButton.addEventListener('click', () => {
-      window.scrollTo({ top: 0, behavior: 'smooth' });
+      window.scrollTo({
+        top: 0,
+        behavior: 'smooth'
+      });
     });
   </script>
 </body>
