--- a/jakarta-bandung.html
+++ b/jakarta-bandung.html
@@ -122,13 +122,13 @@
     </ul>
 
     <h3>Day 1</h3>
-    <div class="row row-cols-sm-2">
+    <div class="row row-cols-sm-2 mb-3">
       <div class="col-sm-3">5:05 PM</div>
       <div class="col-sm-9">From KL to Jakarta</div>
     </div>
 
 
-    <div class="row row-cols-sm-2">
+    <div class="row row-cols-sm-2 mb-3">
       <div class="col-sm-3">
         6.10pm
       </div>
@@ -318,6 +318,47 @@
       </div>
     </div>
   </div>
+
+  <h3>Day 2</h3>d
+  <div class="row row-cols-sm-2 mb-3">
+    <div class="col-sm-3">7:30 AM</div>
+    <div class="col-sm-9">VIHARA DHARMA BHAKTI (6am - 4pm)</div>
+  </div>
+
+  <div class="row row-cols-sm-2 mb-3">
+    <div class="col-sm-3">8:00 AM</div>
+    <div class="col-sm-9">Glodok Chinatown Market</div>
+  </div>
+
+  <div class="row row-cols-sm-2 mb-3">
+    <div class="col-sm-3">8:30 AM</div>
+    <div class="col-sm-9">
+      <p>Breakfast</p>
+      <ol>
+        <li>
+          Option 1: Djauw Coffee Glodok
+        </li>
+          Option 2: Kopi Es Tak Kie (6am - 2pm)
+        </li>
+      </ol>
+    </div>
+  </div>
+
+  <div class="row row-cols-sm-2 mb-3">
+    <div class="col-sm-3">9:30 AM</div>
+    <div class="col-sm-9">Petak Enam (9.30am - 9pm)</div>
+  </div>
+
+  <div class="row row-cols-sm-2 mb-3">
+    <div class="col-sm-3">10:00 AM</div>
+    <div class="col-sm-9">Heading to Kota Tua</div>
+  </div>
+
+  <div class="row row-cols-sm-2 mb-3">
+    <div class="col-sm-3">11.45 AM</div>
+    <div class="col-sm-9">Lunch at Cafe Betavia</div>
+  </div>
+
   <!-- Back-to-Top Button -->
   <!-- <button id="back-to-top" title="Back to Top"><i class="bi bi-arrow-up"></i></button> -->
   <!-- Back to Top Button -->
