--- a/jakarta-bandung.html
+++ b/jakarta-bandung.html
@@ -359,6 +359,65 @@
       <div class="col-sm-3">11.45 AM</div>
       <div class="col-sm-9">Lunch at Cafe Betavia</div>
     </div>
+
+    <div class="row row-cols-sm-2 mb-3">
+      <div class="col-sm-3">1.15 PM</div>
+      <div class="col-sm-9">Heading to Masjid Istiqlal (4am - 10pm)</div>
+    </div>
+
+    <div class="row row-cols-sm-2 mb-3">
+      <div class="col-sm-3">2.45 PM</div>
+      <div class="col-sm-9">Gereja Katedral Jakarta(8am - 8pm)</div>
+    </div>
+
+    <div class="row row-cols-sm-2 mb-3">
+      <div class="col-sm-3">3.30 PM</div>
+      <div class="col-sm-9">
+        <p>Ice Cream</p>
+        <ol>
+          <ul>
+            Ragusa Es Italia (10am - 9pm)
+          </ul>
+          <ul>
+            21 Factory (10am - 10pm)
+          </ul>
+        </ol>
+      </div>
+    </div>
+
+    <div class="row row-cols-sm-2 mb-3">
+      <div class="col-sm-3">4.00 PM</div>
+      <div class="col-sm-9">Heading to Monumen National(8am - 10pm)</div>
+    </div>
+
+    <div class="row row-cols-sm-2 mb-3">
+      <div class="col-sm-3">4.00 PM</div>
+      <div class="col-sm-9">Heading to Monumen National(8am - 10pm) & Lapangan Merdeka</div>
+    </div>
+
+    <div class="row row-cols-sm-2 mb-3">
+      <div class="col-sm-3">5.30 PM</div>
+      <div class="col-sm-9">
+        <p>Heading to Dinner, options:</p>
+        <ol>
+          <li>Seribu Rasa Plaza Indonesia (11am - 9pm)</li>
+          <li>Remboelan (10am - 10pm)</li>
+          <li>Kaum Jakarta (11am - 10pm)</li>
+        </ol>
+      </div>
+    </div>
+
+    <div class="row row-cols-sm-2 mb-3">
+      <div class="col-sm-3">8.00 PM</div>
+      <div class="col-sm-9">
+        <p>Shopping, options:</p>
+        <ul>
+          <li>Grand Indonesia Shopping Town (10am - 10pm)</li>
+          <li>Central Park Mall (10am - 10pm)</li>
+          <li>Hypermarket - Gajah Mada Plaza (10am - 10pm)</li>
+        </ul>
+      </div>
+    </div>
   </div>
   <!-- Back-to-Top Button -->
   <!-- <button id="back-to-top" title="Back to Top"><i class="bi bi-arrow-up"></i></button> -->
