--- a/jakarta-bandung.html
+++ b/jakarta-bandung.html
@@ -373,14 +373,10 @@
     <div class="row row-cols-sm-2 mb-3">
       <div class="col-sm-3">3.30 PM</div>
       <div class="col-sm-9">
-        <p>Ice Cream</p>
+        <p>Ice Cream, options:</p>
         <ol>
-          <ul>
-            Ragusa Es Italia (10am - 9pm)
-          </ul>
-          <ul>
-            21 Factory (10am - 10pm)
-          </ul>
+          <li>Ragusa Es Italia (10am - 9pm)</li>
+          <li>21 Factory (10am - 10pm)</li>
         </ol>
       </div>
     </div>
@@ -411,11 +407,11 @@
       <div class="col-sm-3">8.00 PM</div>
       <div class="col-sm-9">
         <p>Shopping, options:</p>
-        <ul>
+        <ol>
           <li>Grand Indonesia Shopping Town (10am - 10pm)</li>
           <li>Central Park Mall (10am - 10pm)</li>
           <li>Hypermarket - Gajah Mada Plaza (10am - 10pm)</li>
-        </ul>
+        </ol>
       </div>
     </div>
   </div>
