--- a/jakarta-bandung.html
+++ b/jakarta-bandung.html
@@ -334,14 +334,14 @@
     <div class="row row-cols-sm-2 mb-3">
       <div class="col-sm-3">8:30 AM</div>
       <div class="col-sm-9">
-        <p>Breakfast</p>
-        <ol>
+        <p>Breakfast, options:</p>
+        <ul>
           <li>
-            Option 1: Djauw Coffee Glodok
+            Djauw Coffee Glodok
           </li>
-          Option 2: Kopi Es Tak Kie (6am - 2pm)
+            Kopi Es Tak Kie (6am - 2pm)
           </li>
-        </ol>
+        </ul>
       </div>
     </div>
 
@@ -374,10 +374,10 @@
       <div class="col-sm-3">3.30 PM</div>
       <div class="col-sm-9">
         <p>Ice Cream, options:</p>
-        <ol>
+        <ul>
           <li>Ragusa Es Italia (10am - 9pm)</li>
           <li>21 Factory (10am - 10pm)</li>
-        </ol>
+        </ul>
       </div>
     </div>
 
@@ -390,11 +390,11 @@
       <div class="col-sm-3">5.30 PM</div>
       <div class="col-sm-9">
         <p>Heading to Dinner, options:</p>
-        <ol>
+        <ul>
           <li>Seribu Rasa Plaza Indonesia (11am - 9pm)</li>
           <li>Remboelan (10am - 10pm)</li>
           <li>Kaum Jakarta (11am - 10pm)</li>
-        </ol>
+        </ul>
       </div>
     </div>
 
@@ -402,11 +402,11 @@
       <div class="col-sm-3">8.00 PM</div>
       <div class="col-sm-9">
         <p>Shopping, options:</p>
-        <ol>
+        <ul>
           <li>Grand Indonesia Shopping Town (10am - 10pm)</li>
           <li>Central Park Mall (10am - 10pm)</li>
           <li>Hypermarket - Gajah Mada Plaza (10am - 10pm)</li>
-        </ol>
+        </ul>
       </div>
     </div>
   </div>
