--- a/jakarta-bandung.html
+++ b/jakarta-bandung.html
@@ -336,11 +336,8 @@
       <div class="col-sm-9">
         <p>Breakfast, options:</p>
         <ul>
-          <li>
-            Djauw Coffee Glodok
-          </li>
-            Kopi Es Tak Kie (6am - 2pm)
-          </li>
+          <li>Djauw Coffee Glodok</li>
+          <li>Kopi Es Tak Kie (6am - 2pm)</li>
         </ul>
       </div>
     </div>
