--- a/tokyo2025/tokyo1.html
+++ b/tokyo2025/tokyo1.html
@@ -8,37 +8,13 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="/css/style.css">
     <style>
-        body {
-            background-color: #f8f9fa;
-        }
 
-        .post {
-            max-width: 900px;
-            margin: 0 auto;
-        }
-
-        .post-content {
-            background-color: rgba(255, 255, 255, 0.8);
-        }
-
-        h2 {
-            color: #2c3e50;
-        }
-
-        h3 {
-            color: #34495e;
-        }
-
-        .lead {
-            font-size: 1.15rem;
-            line-height: 1.7;
-        }
     </style>
 </head>
 
 <body>
 
-    <header class="bg-dark text-white py-4 mb-4">
+    <header class="bg-dark text-white py-4 mb-4 site-header">
         <div class="container">
             <h1><a href="index.html" class="text-white text-decoration-none">Rou En Travel Diary</a></h1>
             <nav>
@@ -104,6 +80,26 @@
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+    <script>
+        (function () {
+            const header = document.querySelector('header.site-header');
+            if (!header) return;
+
+            function updateHeaderVar() {
+                const h = Math.ceil(header.getBoundingClientRect().height);
+                document.documentElement.style.setProperty('--header-height', h + 'px');
+            }
+
+            function onScroll() {
+                header.classList.toggle('shrink', window.scrollY > 60);
+                requestAnimationFrame(updateHeaderVar);
+            }
+
+            window.addEventListener('scroll', onScroll, { passive: true });
+            window.addEventListener('resize', updateHeaderVar);
+            window.addEventListener('load', () => { updateHeaderVar(); onScroll(); });
+        })();
+    </script>
 </body>
 
 </html>
