--- a/tokyo2025/tokyo1.html
+++ b/tokyo2025/tokyo1.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tokyo 13/9/2025 - 21/9/2025</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
     <link rel="stylesheet" href="/css/style.css">
     <style>
 
@@ -57,27 +58,62 @@
                 </div>
 
                 <h3 class="text-secondary mb-3">1st Day (14/09/2025)</h3>
-                <p>We depart yesterday from Kuala Lumpur, KLIA 1 airport (19:25) to Ho Chi Minh, Tan Son Nhat
-                    International Airport (SGN) (20:35) for transit. Then fly from Ho Chi Minh (00:25) and reached Tokyo
-                    Narita airport (08:00) </p>
-                <p>After we arrive at Narita airport, we buy the "Welcome Suica" IC card using the machine. Then collect
-                    the Tokyo Metro Pass using the machine as well. </p>
-                <p>Our planning is to take the Keisei Narita Skyaccess from the airport to Asakusa, which are chaper and
-                    directly reach Asakusa. But we went to the wrong train, which heading to Ueno, luckily Ueno is
-                    consider quite near and convenient to reach Asakusa by train. We arrived at the Asakusa Tobu hotel
-                    around 10:30 am, we are lucky that staff offered us to have early check-in, feel refreshing after a
-                    shower especially after traveling for long hours.</p>
 
-                <p>Lunch we eat tonkatsu in asakusa</p>
+                <div class="timeline-container">
+                    <!-- Journey Section -->
+                    <div class="journey-card mb-4">
+                        <h4 class="text-primary"><i class="bi bi-airplane"></i> Journey to Tokyo</h4>
+                        <ul class="timeline-list">
+                            <li>
+                                <strong>KUL → SGN:</strong> KLIA 1 (19:25) → Tan Son Nhat Airport (20:35)
+                            </li>
+                            <li>
+                                <strong>SGN → NRT:</strong> Ho Chi Minh (00:25) → Narita Airport (08:00)
+                            </li>
+                        </ul>
+                    </div>
 
-                <p>Then we take train to Ueno again, we plan our first day attractions focus at here.</p>
+                    <!-- Morning Activities -->
+                    <div class="activity-card mb-4">
+                        <h4 class="text-success"><i class="bi bi-sun"></i> Morning</h4>
+                        <div class="activity-content">
+                            <ul class="activity-list">
+                                <li>Arrived at Narita Airport (08:00)</li>
+                                <li>Purchased "Welcome Suica" IC card</li>
+                                <li>Got Tokyo Metro Pass</li>
+                                <li>Accidentally took train to Ueno instead of Asakusa</li>
+                                <li>Reached Asakusa Tobu Hotel (10:30)</li>
+                                <li>Early check-in and refreshing shower</li>
+                            </ul>
+                        </div>
+                    </div>
 
-
-                <ol class="list-group list-group-numbered mb-4">
-                    <li class="list-group-item">Ueno Zoo</li>
-                    <li>National Museum of Nature and Science</li>
-                    <li>Ameya-Yokocho Market</li>
-                </ol>
+                    <!-- Afternoon Activities -->
+                    <div class="activity-card mb-4">
+                        <h4 class="text-warning"><i class="bi bi-sun-fill"></i> Afternoon</h4>
+                        <div class="activity-content">
+                            <p class="mb-3">Lunch: Tonkatsu in Asakusa</p>
+                            <p class="mb-2">Explored Ueno Area:</p>
+                            <div class="places-visited">
+                                <div class="place-card">
+                                    <h5>Ueno Zoo</h5>
+                                    <img src="/images/tokyo-2025/ueno-zoo.jpg" alt="Ueno Zoo"
+                                        class="img-fluid rounded mb-2">
+                                </div>
+                                <div class="place-card">
+                                    <h5>National Museum of Nature and Science</h5>
+                                    <img src="/images/tokyo-2025/science-museum.jpg" alt="Science Museum"
+                                        class="img-fluid rounded mb-2">
+                                </div>
+                                <div class="place-card">
+                                    <h5>Ameya-Yokocho Market</h5>
+                                    <img src="/images/tokyo-2025/ameyoko.jpg" alt="Ameya-Yokocho Market"
+                                        class="img-fluid rounded mb-2">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
 
                 <hr class="my-4">
                 <a href="index.html" class="btn btn-secondary">&larr; Back to All Posts</a>
