--- a/tokyo2025/tokyo1.html
+++ b/tokyo2025/tokyo1.html
@@ -92,7 +92,24 @@
                     <div class="activity-card mb-4">
                         <h4 class="text-warning"><i class="bi bi-sun-fill"></i> Afternoon</h4>
                         <div class="activity-content">
-                            <p class="mb-3">Lunch: Tonkatsu in Asakusa</p>
+                            <p class="mb-3">
+                                Lunch:
+                                <a href="https://www.tonkatsu-oribe.jp/" target="_blank" rel="noopener noreferrer">
+                                    Tonkatsu Oribe
+                                </a> in Asakusa
+                            </p>
+
+                            <figure class="mb-3">
+                                <a href="https://www.tonkatsu-oribe.jp/" target="_blank" rel="noopener noreferrer"
+                                    aria-label="Open Tonkatsu Oribe website (opens in new tab)">
+                                    <img src="/images/tokyo-2025/tonkatsu-lunch.jpg"
+                                        alt="Crispy tonkatsu (breaded pork cutlet) served with rice and shredded cabbage at Tonkatsu Oribe, Asakusa"
+                                        class="img-fluid rounded shadow-sm" loading="lazy">
+                                </a>
+                                <figcaption class="small text-muted mt-2">Tonkatsu Oribe - delicious and crispy. Highly
+                                    recommended.</figcaption>
+                            </figure>
+
                             <p class="mb-2">Explored Ueno Area:</p>
                             <div class="places-visited">
                                 <div class="place-card">
