--- a/tokyo2025/tokyo1.html
+++ b/tokyo2025/tokyo1.html
@@ -48,7 +48,7 @@
                     <div class="row">
                         <div class="col-md-6">
                             <img src="/images/tokyo-2025/tokyo-2025-main.jpg" alt="Tokyo"
-                                class="img-fluid rounded mb-3">
+                                class="img-fluid rounded mb-3 lightbox">
                         </div>
                         <div class="col-md-6">
                             <p class="lead">This is my first time went to Tokyo, we get a good deal with Vietnam
@@ -100,12 +100,11 @@
                             </p>
 
                             <figure class="mb-3">
-                                <a href="https://www.tonkatsu-oribe.jp/" target="_blank" rel="noopener noreferrer"
-                                    aria-label="Open Tonkatsu Oribe website (opens in new tab)">
+                                
                                     <img src="/images/tokyo-2025/tonkatsu-lunch.jpg"
                                         alt="Crispy tonkatsu (breaded pork cutlet) served with rice and shredded cabbage at Tonkatsu Oribe, Asakusa"
-                                        class="img-fluid rounded shadow-sm" loading="lazy">
-                                </a>
+                                        class="img-fluid rounded shadow-sm lightbox" loading="lazy">
+                                
                                 <figcaption class="small text-muted mt-2">Tonkatsu Oribe - delicious and crispy. Highly
                                     recommended.</figcaption>
                             </figure>
@@ -115,17 +114,17 @@
                                 <div class="place-card">
                                     <h5>Ueno Zoo</h5>
                                     <img src="/images/tokyo-2025/ueno-zoo.jpg" alt="Ueno Zoo"
-                                        class="img-fluid rounded mb-2">
+                                        class="img-fluid rounded mb-2 lightbox">
                                 </div>
                                 <div class="place-card">
                                     <h5>National Museum of Nature and Science</h5>
                                     <img src="/images/tokyo-2025/ueno-science-museum.jpg" alt="Science Museum"
-                                        class="img-fluid rounded mb-2">
+                                        class="img-fluid rounded mb-2 lightbox">
                                 </div>
                                 <div class="place-card">
                                     <h5>Ameya-Yokocho Market</h5>
                                     <img src="/images/tokyo-2025/ueno-ameyoko.jpg" alt="Ameya-Yokocho Market"
-                                        class="img-fluid rounded mb-2">
+                                        class="img-fluid rounded mb-2 lightbox">
                                 </div>
                             </div>
                         </div>
@@ -142,6 +141,21 @@
         <p class="mb-0">&copy; 2025 Rou En Travel Diary. All rights reserved.</p>
     </footer>
 
+    <!-- Lightbox modal -->
+    <div class="modal fade" id="lightboxModal" tabindex="-1" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered modal-lg">
+            <div class="modal-content bg-transparent border-0">
+                <button type="button" class="btn-close btn-close-white position-absolute top-0 end-0 m-3"
+                    data-bs-dismiss="modal" aria-label="Close"></button>
+                <div class="modal-body p-0 d-flex justify-content-center align-items-center">
+                    <img src="" alt="" id="lightboxImage" class="img-fluid rounded">
+                </div>
+                <div class="modal-footer justify-content-center bg-transparent border-0">
+                    <small id="lightboxCaption" class="text-white"></small>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <script>
@@ -162,6 +176,19 @@
             window.addEventListener('scroll', onScroll, { passive: true });
             window.addEventListener('resize', updateHeaderVar);
             window.addEventListener('load', () => { updateHeaderVar(); onScroll(); });
+
+            document.addEventListener('click', function (e) {
+                const img = e.target.closest('img.lightbox');
+                if (!img) return;
+                const modalEl = document.getElementById('lightboxModal');
+                const modalImg = document.getElementById('lightboxImage');
+                const caption = document.getElementById('lightboxCaption');
+                modalImg.src = img.src;
+                modalImg.alt = img.alt || '';
+                caption.textContent = img.getAttribute('data-caption') || img.alt || '';
+                const modal = new bootstrap.Modal(modalEl);
+                modal.show();
+            }, { passive: true });
         })();
     </script>
 </body>
