--- a/tokyo2025/tokyo1.html
+++ b/tokyo2025/tokyo1.html
@@ -129,6 +129,27 @@
                             </div>
                         </div>
                     </div>
+
+                    <!-- Evening / Dinner -->
+                    <div class="activity-card mb-4">
+                        <h4 class="text-info"><i class="bi bi-moon"></i> Evening</h4>
+                        <div class="activity-content">
+                            <ul class="timeline-list mb-3">
+                                
+                                <li><strong>19:15</strong> Dinner at <a href="https://example.com" target="_blank" rel="noopener noreferrer">Local Izakaya</a> — yakitori, tempura and local sake.</li>
+                                <li><strong>18:30</strong> Returned to Asakusa and freshened up at Asakusa Tobu Hotel.</li>
+                                
+                                <li><strong>22:00</strong> Headed back to the hotel for rest and notes about the day.</li>
+                            </ul>
+
+                            <figure class="mb-3">
+                                <img src="/images/tokyo-2025/asakusa-dinner.jpg"
+                                     alt="Evening dinner in Asakusa, warm izakaya atmosphere"
+                                     class="img-fluid rounded shadow-sm lightbox" loading="lazy">
+                                <figcaption class="small text-muted mt-2">Evening dinner in Asakusa — cozy izakaya vibes.</figcaption>
+                            </figure>
+                        </div>
+                    </div>
                 </div>
 
                 <hr class="my-4">
