--- a/tokyo2025/tokyo1.html
+++ b/tokyo2025/tokyo1.html
@@ -136,17 +136,16 @@
                         <div class="activity-content">
                             <ul class="timeline-list mb-3">
                                 
-                                <li><strong>19:15</strong> Dinner at <a href="https://example.com" target="_blank" rel="noopener noreferrer">Local Izakaya</a> — yakitori, tempura and local sake.</li>
-                                <li><strong>18:30</strong> Returned to Asakusa and freshened up at Asakusa Tobu Hotel.</li>
+                                <li>Dinner at a Ramen restaurant at Ameya-Yokocho Market</li>
                                 
-                                <li><strong>22:00</strong> Headed back to the hotel for rest and notes about the day.</li>
+                                <li>Headed back to the hotel for rest and notes about the day.</li>
                             </ul>
 
                             <figure class="mb-3">
-                                <img src="/images/tokyo-2025/asakusa-dinner.jpg"
-                                     alt="Evening dinner in Asakusa, warm izakaya atmosphere"
+                                <img src="/images/tokyo-2025/dinner-ueno.jpg"
+                                     alt="Evening dinner nearby Ameya-Yokocho Market, cozy izakaya atmosphere"
                                      class="img-fluid rounded shadow-sm lightbox" loading="lazy">
-                                <figcaption class="small text-muted mt-2">Evening dinner in Asakusa — cozy izakaya vibes.</figcaption>
+                                <figcaption class="small text-muted mt-2">Evening dinner at Ameya-Yokocho Market — cozy izakaya vibes.</figcaption>
                             </figure>
                         </div>
                     </div>
